...
    enabled: Boolean = true,
) {
    OutlinedTextField(
        value = value,
        onValueChange = onValueChange,
        enabled = enabled,
        label = { Text("e m a i l") },
        singleLine = true,
        isError = false, // TODO
        /*supportingText = {
            if (emailError) Text("Formato de email no válido")
        },*/
        keyboardOptions = KeyboardOptions(
...
    var passwordVisible by remember { mutableStateOf(false) }

    OutlinedTextField(
        value = value,
        onValueChange = onValueChange,
        enabled = enabled,
        label = { Text("p a s s w o r d") },
        singleLine = true,
        isError = false, // TODO: validación real
        visualTransformation = if (passwordVisible) {
            VisualTransformation.None
        } else {
            PasswordVisualTransformation()
...
