...
    Button(
        enabled = !state.value.isLoading,
        onClick = {
            onAction(LoginIntent.Login)
        },
        modifier = Modifier
            .testTag("login_screen_login_button")
            .fillMaxWidth(),
    ) {
        if (state.value.isLoading) {
            CircularProgressIndicator(
                modifier = Modifier
                    .size(20.dp), // tamaño reducido para que encaje bien en el botón
                strokeWidth = 2.dp,
                color = MaterialTheme.colorScheme.onPrimary, // color visible sobre el fondo
            )
        } else {
            Text(text = "Log in")
        }
    }
}

@Composable
fun RegisterButton(
...
